# cdxgen

./: .codacy.yml  .dockerignore  .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  .npmrc  .pnpmfile.cjs  .pokurc.jsonc  .prettierrc.cjs  .prototools  ADVANCED.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-deno  HISTORY.md  LICENSE  NOTICE  README.md  \..\..\..\..\..\lmao.js  analyzer.js  appimage-builder.yml  appimage-reqs.sh  binary.js  biome.json  blah.md  bom.xml  bun.lockb  cbomutils.js  cpe.js  cpe.test.js  db.js  deno.json  devenv.nix  devenv.yaml  display.js  display.test.js  (+46 more)
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: config.yml  premium-issue.md
.github/codeql/: config.yml
.github/workflows/: app-release.yml  appimage-lts.yml  appimage.yml  binary-builds.yml  build-base-images.yml  build-image.yml  build-images.yml  build-rolling-image.yml  codeql.yml  docker.yaml  docker.yml  dockertests.yml  fix-renovate-pnpm-checksum.yml  image-build.yml  java-reachables-test.yml  lint.yml  nodejs.yml  npm-release.yml  nydus-demo.yml  pr.yaml  pr.yml  python-atom-tests.yml  reachables-tests.yml  rebuild-release-images.yml  release.yml  renovate.yml  repotests.yml  rerun-workflow.yml  snapshot-tests.yml  test-nodejs-nightly.yml  test.yaml
.versions/: gradle_8  gradle_9  maven_3  maven_4  node_20  node_21  node_22  node_23  node_24  node_25  nvm
api_docs/: hierarchy.html  index.html  modules.html
api_docs/assets/: highlight.css  navigation.js  search.js
api_docs/functions/: bin_repl.importSbom.html  lib_cli.createBom.html  (+338 more)
ci/: Dockerfile  Dockerfile-bun  Dockerfile-deno  Dockerfile-fedora  Dockerfile-perms  Dockerfile-ppc64  Dockerfile-secure  containerd-config.toml  nydusd-config.fusedev.json
contrib/: README.md  bom-validate.py  cloud-init.txt  free_disk_space.sh  piptree.py  py-modules.py  rebuild-sqlite3.sh  wrapdb.py
data/: README.md  bom-1.4.schema.json  bom-1.5.schema.json  bom-1.6.schema.json  bom-1.7.schema.json  cbomosdb-queries.json  component-tags.json  cosdb-queries.json  crypto-oid.json  cryptography-defs.json  cryptography-defs.schema.json  frameworks-list.json  glibc-stdlib.json  jsf-0.82.schema.json  known-licenses.json  lic-mapping.json  pypi-pkg-aliases.json  python-stdlib.json  queries-darwin.json  queries-win.json  queries.json  ruby-known-modules.json  spdx-licenses.json  spdx.schema.json  vendor-alias.json  wrapdb-releases.json
docs/: ADVANCED.md  ALLOWED_HOSTS_AND_COMMANDS.md  CLI.md  ENV.md  GETTING_STARTED.md  LESSON1.md  LESSON2.md  LESSON3.md  LESSON4.md  LESSON5.md  PERMISSIONS.md  PROJECT_TYPES.md  README.md  SERVER.md  SUPPORT.md  _coverpage.md  _sidebar.md  api-docs.html  index.html  ml_profiles.md
it-tests/: README.md  diff.sh  predefined-projects.sh  run.sh  verify.sh
lib/: cdxgen.js  evinse.js  repl.js
model/: AttachmentText.js  Bom.js  Component.js  CycloneDXObject.js  Dependency.js  ExternalReference.js  ExternalReferenceList.js  Hash.js  HashList.js  License.js  LicenseChoice.js  Manufacture.js  Metadata.js  OrganizationalContact.js  OrganizationalEntity.js  Swid.js  Tool.js
plugins/: .gitignore
test/: Podfile  Podfile.json  gradle-build-env-dep.out  gradle-dep-parallel.out  gradle-dep.out  gradle-prop-parallel.out  package-lock.json  pnpm-lock.yaml  pom.xml  repos.csv  sample.csproj  sample_4x.csproj  shrinkwrap-deps.json  testing.py
test/data/: Cargo3.toml  Directory.Packages.props  Dockerfile  Logging.csproj  METADATA  Package.resolved  Package2.resolved  Server.csproj  WindowsFormsApplication1.csproj  alpine-installed  appthreat_depscan-2.0.2-py3-none-any.whl  apt-search-out.txt  atom-sbt-list.txt  atom-sbt-tree.txt  bitbucket-pipelines.yml  bom-deps.json  bom-deps.xml  bom-gradle-deps.json  bom-gradle-deps.xml  bom-gradle.json.map  bom-java.json  bom-maven.json.map  bom-mavenplugins.json  bom-mavenplugins.xml  bom-maventree.json  bom-maventree.xml  bom-postgen-test.json  bom-postgen-test2.json  bower.json  bun.lockb  cabal.project.freeze  cargo-auditable.txt  chen-science-requirements.txt  clj-tree.txt  compile_commands.json  composer-2.json  composer.json  conanfile.txt  conanfile.with_custom_pkg_user_channel.txt  conda-list.json  (+116 more)
test/data/bazel/: bazel-action-graph.txt  bazel-state.txt
test/data/cmakes/: CMakeLists-version.txt  conanfile1.txt
test/data/issue-2069/: requirements.txt
test/data/issue-2082/: requirements.txt
test/data/issue-2156/: demo.csproj
test/data/openapi/: openapi-spec.json
test/data/package-json/theia/: package-lock.json
test/data/package-json/v1/: package-lock.json  package.json
test/data/package-json/v2/: package-lock.json  package.json
test/data/package-json/v2-workspace/: package-lock.json  package.json
test/data/package-json/v3/: package-lock.json  package.json
test/data/pnpm_locks/: pnpm-workspace.yaml
test/data/swiftsem/: bom-hakit.json  output-file-map.json  package.swift-structure.json  semantics.slices.json  swift-build-output1.txt  swift-dump-package.json  swift-index-speech.json  swift-index-starscream.json  swift-index-starscream2.json  swift-module-info.json  swift-module-info2.json  swift-structure-grdb.json  swift-structure-speech.json  swift-structure-starscream.json  swift-structure-starscream2.json
test/data/yarn-workspaces-same-version-demo/: package.json
tests/: .gitattributes  index.test.js  other-bom.xml
tools_config/: io.shiftleft.cdxgen.appdata.xml  org.cyclonedx.cdxgen.appdata.xml
types/: analyzer.d.ts  analyzer.d.ts.map  binary.d.ts  binary.d.ts.map  cbomutils.d.ts  cbomutils.d.ts.map  db.d.ts  db.d.ts.map  display.d.ts  display.d.ts.map  docker.d.ts  docker.d.ts.map  envcontext.d.ts  envcontext.d.ts.map  evinser.d.ts  evinser.d.ts.map  index.d.ts  index.d.ts.map  jest.config.d.ts  jest.config.d.ts.map  piptree.d.ts  piptree.d.ts.map  postgen.d.ts  postgen.d.ts.map  pregen.d.ts  pregen.d.ts.map  protobom.d.ts  protobom.d.ts.map  server.d.ts  server.d.ts.map  utils.d.ts  utils.d.ts.map  validator.d.ts  validator.d.ts.map
(+588 files in other folders)
